--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,6 +7,11 @@ on:
   schedule:
     - cron: '*/15 * * * *'
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
